--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl         = "/"
-theme           = "casper-two"
+theme           = "hugo-casper-two"
 languageCode    = "en-US"
 paginate        = 5
 
