--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ paginate        = 5
   subtitle    = "...sullo sviluppo Web"
 
   cover       = "/images/header.jpg"
-  description = "Un blog tecnico incentrato sul tema dello sviluppo web."
+  description = "Un blog tecnico sullo sviluppo Web"
   metaDescription = ""
   googleAnalytics = ""
   customCSS = []
