--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = ""
 
 [context.production.environment]
 HUGO_VERSION = "0.55.6"
@@ -8,7 +8,7 @@ HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
 
 [context.split1]
-command = "hugo --gc --minify --enableGitInfo"
+command = ""
 
 [context.split1.environment]
 HUGO_VERSION = "0.55.6"
@@ -21,7 +21,7 @@ command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 HUGO_VERSION = "0.55.6"
 
 [context.branch-deploy]
-command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+command = ""
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.55.6"
